--- a/nginx-server/nginx.conf
+++ b/nginx-server/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 90;
     server_name localhost;
 
-    root /usr/share/nginx-server/html;
+    root /usr/share/nginx/html/;
     index index.html;
 
     location / {
@@ -12,7 +12,7 @@ server {
     location /server-application/ {
         fastcgi_pass backend:5695;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME /usr/share/nginx-server/html$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html/$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
     }
 }
