--- a/nginx-server/nginx.conf
+++ b/nginx-server/nginx.conf
@@ -12,7 +12,7 @@ server {
     location /server-application/ {
         fastcgi_pass backend:5695;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html/$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
     }
 }
